--- a/app/src/main/res/layout/mylistitem.xml
+++ b/app/src/main/res/layout/mylistitem.xml
@@ -7,7 +7,7 @@
     android:layout_marginTop="2dp"
     android:background="@color/gray"
     android:id="@+id/layoutcharakterRolle"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="4dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
