--- a/app/src/main/res/layout/fragment_add_players.xml
+++ b/app/src/main/res/layout/fragment_add_players.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_gray">
@@ -84,15 +82,15 @@
         android:textSize="20dp" />
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/anzahlPersoenenText"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listePers"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1" />
     </RelativeLayout>
