--- a/app/src/main/res/layout/mylistitem.xml
+++ b/app/src/main/res/layout/mylistitem.xml
@@ -5,10 +5,11 @@
     android:layout_height="64dp"
     android:orientation="horizontal"
     android:layout_marginTop="2dp"
-    android:background="@color/gray"
     android:id="@+id/layoutcharakterRolle"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="4dp"
+
+    android:background="@drawable/button_rounded_corners"
+    android:backgroundTint="@color/gray"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
