show character cards in matching

--- a/app/src/main/res/layout/fragment_cards_playermatching.xml
+++ b/app/src/main/res/layout/fragment_cards_playermatching.xml
@@ -17,7 +17,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/button_rounded_corners"
+            android:background="@drawable/leiste_werwolf"
             android:backgroundTint="@color/green">
 
             <TextView
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rollen"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
