--- a/app/src/main/res/layout/activity_nightlist.xml
+++ b/app/src/main/res/layout/activity_nightlist.xml
@@ -200,7 +200,7 @@
 
     <!-- Hexe Steuerung -->
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/personen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -211,6 +211,6 @@
         android:layout_marginBottom="8dp">
 
 
-    </ListView>
+    </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
 
