renamed ui components

--- a/app/src/main/res/layout/activity_victory.xml
+++ b/app/src/main/res/layout/activity_victory.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/bildCharakter"
+        android:id="@+id/imageViewCharacter"
         android:layout_width="250dp"
         android:layout_height="250dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +32,7 @@
         app:layout_constraintBottom_toTopOf="@+id/victoryStartScreenButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bildCharakter" />
+        app:layout_constraintTop_toBottomOf="@+id/imageViewCharacter" />
 
 
     <Button
