--- a/app/src/main/res/layout/mylistitem.xml
+++ b/app/src/main/res/layout/mylistitem.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutCharacterCard"
     android:layout_width="match_parent"
     android:layout_height="64dp"
-    android:orientation="horizontal"
     android:layout_marginTop="2dp"
-    android:id="@+id/layoutcharakterRolle"
     android:layout_marginBottom="4dp"
-
     android:background="@drawable/button_rounded_corners"
     android:backgroundTint="@color/gray"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="horizontal">
 
     <TextView
-        android:layout_gravity="center"
-        android:id="@+id/charakter"
+        android:id="@+id/textViewCharactername"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:layout_marginEnd="5dp"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 </LinearLayout>
 
