--- a/app/src/main/res/layout/item_character_selection.xml
+++ b/app/src/main/res/layout/item_character_selection.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layoutcharakterRolle"
+    android:id="@+id/layoutCharacterCard"
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:layout_marginBottom="4dp"
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/list_layout"
+        android:id="@+id/layoutList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
