--- a/app/src/main/res/layout/mylistitemicon.xml
+++ b/app/src/main/res/layout/mylistitemicon.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,7 +8,7 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/iconListe"
+        android:id="@+id/imageViewIcon"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="5dp"
@@ -21,7 +19,7 @@
         tools:ignore="ContentDescription" />
 
     <TextView
-        android:id="@+id/textPer"
+        android:id="@+id/textViewLabel"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="5dp"
