--- a/app/src/main/res/layout/mylistitemwhitetext.xml
+++ b/app/src/main/res/layout/mylistitemwhitetext.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,7 +7,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/textPer"
+        android:id="@+id/textViewLabel"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="5dp"
